<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight="0"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFAAAAAA"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tab_context_menu_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="#FFFFFFFF"
            android:drawablePadding="15dp"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:textColor="#FF33b5e5"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#FF33b5e5"
            android:orientation="vertical" />

        <TextView
            android:id="@+id/tab_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/tab_context_menu_selector"
            android:drawableLeft="@android:drawable/ic_menu_preferences"
            android:drawablePadding="15dp"
            android:padding="20dp"
            android:text="@string/settings_tab"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tab_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@drawable/tab_context_menu_selector"
            android:drawableLeft="@android:drawable/ic_menu_delete"
            android:drawablePadding="15dp"
            android:padding="20dp"
            android:text="@string/delete"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tab_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@drawable/tab_context_menu_selector"
            android:drawableLeft="@android:drawable/ic_menu_share"
            android:drawablePadding="15dp"
            android:padding="20dp"
            android:text="@string/output"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tab_to_left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@drawable/tab_context_menu_selector"
            android:drawableLeft="@drawable/ic_menu_back"
            android:drawablePadding="15dp"
            android:padding="20dp"
            android:text="@string/to_left"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tab_to_right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@drawable/tab_context_menu_selector"
            android:drawableLeft="@drawable/ic_menu_forward"
            android:drawablePadding="15dp"
            android:padding="20dp"
            android:text="@string/to_right"
            android:textSize="25sp" />
    </LinearLayout>

</ScrollView>