<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tab_update_dialog_linearlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFAAAAAA"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tab_update_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:drawableLeft="@android:drawable/ic_menu_preferences"
        android:drawablePadding="15dp"
        android:padding="10dp"
        android:text="@string/settings_tab"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#FF33b5e5"
        android:orientation="vertical" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFFFF"
        android:paddingBottom="0dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:text="@string/tab_title"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFFFF"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/tab_title_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="0dp"
            android:inputType="text"
            android:paddingLeft="5dp" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="#FFFFFFFF"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:text="@string/color"
        android:textSize="20sp" />

    <android.support.v4.view.ViewPager
        android:id="@+id/tab_view_pager"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:background="#FFFFFFFF"
        android:clipToPadding="false"
        android:paddingBottom="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/update_tab_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:background="@drawable/tab_context_menu_selector"
            android:gravity="center_horizontal"
            android:padding="20dp"
            android:text="@android:string/cancel" />

        <TextView
            android:id="@+id/update_tab_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:background="@drawable/tab_context_menu_selector"
            android:gravity="center_horizontal"
            android:padding="20dp"
            android:text="@android:string/ok" />
    </LinearLayout>

</LinearLayout>